Simplify Owner FIFO retirement and dependency waits